<resources>
    <string name="app_name">Iconnet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_master_user">Master User</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_teknisi">Teknisi</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_pengaduan">Pengaduan</string>
    <string name="menu_tugas">Tugas Teknisi</string>
</resources>